# Camera-Pose-Capture

./: CMakeLists.txt  calibration_poses.bag  calibration_poses_cpp.bag  package.xml
launch/: irb1200_rviz_capture.launch
scripts/: capture_poses.py  move_to_poses.py  moveit_tutorial.py  read_poses.py
src/: capture_poses.cpp  demo_moveit.cpp  move_to_poses.cpp
